--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ShreyKumar/Web-sockets#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "socket.io": "^3.0.4",
     "ws": "^7.4.1"
